updated to try and get a container that will work on Azure AppService

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -84,6 +84,12 @@ http {
             alias /Kiwi/static/images/favicon.ico;
         }
 
+        location = /robots933456.txt {
+            # Serve a static file or return 200 OK
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+        
         location = /robots.txt {
             alias /Kiwi/static/robots.txt;
         }
