--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -40,13 +40,6 @@ http {
     # https://github.com/kiwitcms/Kiwi/issues/1054
     large_client_header_buffers 4 10k;
 
-    ssl_certificate     /Kiwi/ssl/localhost.crt;
-    ssl_certificate_key /Kiwi/ssl/localhost.key;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers off;
-
     # default proxy settings
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -70,24 +63,15 @@ http {
         listen       [::]:8080;
         server_name  _;
 
-        location / {
-                return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen       8443 ssl;
-        listen       [::]:8443 ssl;
-        server_name  _;
-
-        location = /favicon.ico {
-            alias /Kiwi/static/images/favicon.ico;
-        }
-
+        # Health check endpoint /robots933456.txt
         location = /robots933456.txt {
             # Serve a static file or return 200 OK
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+
+        location = /favicon.ico {
+            alias /Kiwi/static/images/favicon.ico;
         }
         
         location = /robots.txt {
